kubernetes/apps/networking/emonhp/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emonhp
  namespace: networking
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Endpoints
metadata:
  name: emonhp
  namespace: networking
subsets:
  - addresses:
      - ip: 192.168.68.100
    ports:
      - name: http
        port: 80
