kubernetes/apps/networking/emonhp/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emonhp
  namespace: networking
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: emonhp.evans-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emonhp
                port:
                  number: 80
